--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation project(':autoimageslider')
     implementation 'com.android.support:design:28.0.0'
+    //compile 'com.github.chahine:pageindicator:<latest-version>'
 }
