--- a/autoimageslider/build.gradle
+++ b/autoimageslider/build.gradle
@@ -61,8 +61,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation "ru.tinkoff.scrollingpagerindicator:scrollingpagerindicator:1.0.6"
-
+// RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
 
 task copyLibs(type: Copy) {
