--- a/autoimageslider/build.gradle
+++ b/autoimageslider/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 // RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
 }
 
 task copyLibs(type: Copy) {
